--- a/website/content/en/releases/15.0R/hardware.adoc
+++ b/website/content/en/releases/15.0R/hardware.adoc
@@ -849,49 +849,21 @@ controllers.
 
 
 
-Cards supported by the
+The
 **isp**
-driver include:
+driver supports the following optical Fibre Chanel adapters:
 
-Qlogic 2422
-
-> Optical 4Gb Fibre Channel PCI-X cards.
-
-Qlogic 246x (aka 2432)
-
-> Optical 4Gb Fibre Channel PCIe cards.
-
-Qlogic 256x (aka 2532)
-
-> Optical 8Gb Fibre Channel PCIe cards.
-
-Qlogic 267x/836x (aka 2031/8031)
-
-> Optical 16Gb FC/FCoE PCIe cards.
-
-Qlogic 2690/2692/2694 (aka 2684/2692)
-
-> Optical 16Gb Fibre Channel PCIe cards.
-
-Qlogic 2740/2742/2764 (aka 2722/2714)
-
-> Optical 32Gb Fibre Channel PCIe cards.
-
-Qlogic QLE2770/QLE2772 (aka 2812)
-
-> Optical 32Gb Fibre Channel PCIe cards.
-
-Qlogic QLE2774 (aka 2814)
-
-> Optical 32Gb Fibre Channel PCIe cards.
-
-Qlogic QLE2870/QLE2872 (aka 2812)
-
-> Optical 64Gb Fibre Channel PCIe cards.
-
-Qlogic QLE2874 (aka 2814)
-
-> Optical 64Gb Fibre Channel PCIe cards.
+	Model:                               Speed:   Bus:  
+	Qlogic QLE2874 (2814)                64Gb     PCIe  
+	Qlogic QLE2870/QLE2872 (2812)        64Gb     PCIe  
+	Qlogic QLE2774 (2814)                32Gb     PCIe  
+	Qlogic QLE2770/QLE2772 (2812)        32Gb     PCIe  
+	Qlogic 2740/2742/2764 (2722/2714)    32Gb     PCIe  
+	Qlogic 2690/2692/2694 (2684/2692)    16Gb     PCIe  
+	Qlogic 267x/836x (2031/8031) FCoE    16Gb     PCIe  
+	Qlogic 256x (2532)                   8Gb      PCIe  
+	Qlogic 246x (2432)                   4Gb      PCIe  
+	Qlogic 2422                          4Gb      PCI-X
 
 
 
@@ -916,29 +888,22 @@ driver supports the following hardware:
 
 
 
-Controllers supported by the
+The
 **mlx**
-driver include:
+driver supports the following Parallel SCSI RAID controllers:
 
-*	Mylex DAC960P
-*	Mylex DAC960PD / DEC KZPSC (Fast Wide)
-*	Mylex DAC960PDU
-*	Mylex DAC960PL
-*	Mylex DAC960PJ
-*	Mylex DAC960PG
-*	Mylex DAC960PU / DEC PZPAC (Ultra Wide)
-*	Mylex AcceleRAID 150 (DAC960PRL)
-*	Mylex AcceleRAID 250 (DAC960PTL1)
-*	Mylex eXtremeRAID 1100 (DAC1164P)
+*	Mylex DAC960P (Wide Fast SCSI-2)
+*	Mylex DAC960PD / DEC KZPSC (Wide Fast SCSI-2)
+*	Mylex DAC960PDU (Ultra SCSI-3)
+*	Mylex DAC960PL (Wide Fast SCSI-2)
+*	Mylex DAC960PJ (Wide Ultra SCSI-3)
+*	Mylex DAC960PG (Wide Ultra SCSI-3)
+*	Mylex DAC960PU / DEC PZPAC (Wide Ultra SCSI-3)
+*	Mylex AcceleRAID 150 (DAC960PRL) (Wide Ultra2 SCSI)
+*	Mylex AcceleRAID 250 (DAC960PTL1) (Wide Ultra2 SCSI)
+*	Mylex eXtremeRAID 1100 (DAC1164P) (Wide Ultra2 SCSI)
 *	RAIDarray 230 controllers, aka the Ultra-SCSI DEC KZPAC-AA (1-ch, 4MB
 	cache), KZPAC-CA (3-ch, 4MB), KZPAC-CB (3-ch, 8MB cache)
-
-All major firmware revisions (2.x, 3.x, 4.x and 5.x) are supported, however
-it is always advisable to upgrade to the most recent firmware
-available for the controller.
-
-Compatible Mylex controllers not listed should work, but have not been
-verified.
 
 
 [NOTE]
@@ -1358,9 +1323,10 @@ device driver provides support for the following Ethernet controllers:
 
 
 
-Adapters supported by the
+The
 **aue**
-driver include:
+driver supports the following USB Fast Ethernet adapters based on the
+ADMtek AN986 Pegasus chipset:
 
 *	Abocom UFE1000, DSB650TX\_NA
 *	Accton USB320-EC, SpeedStream
@@ -1583,10 +1549,14 @@ driver at this time:
 
 
 
-The following devices are supported by the
+The
 **cdce**
-driver:
+driver supports USB Ethernet interfaces implementing the
+USB Communication Device Class Ethernet Control Model (CDC ECM) or
+Network Control Model (CDC NCM) protocol, such as:
 
+*	Android USB tethering
+*	iPhone USB tethering
 *	Prolific PL-2501 Host-to-Host Bridge Controller
 *	Sharp Zaurus PDA
 *	Terayon TJ-715 DOCSIS Cable Modem
@@ -1877,7 +1847,7 @@ on the Raspberry Pi 4 Model B and related systems.
 It utilizes the BCM54213PE PHY.
 
 
-Ethernet driver for Google Virtual NIC (gVNIC) (man:gve[4] driver)
+The man:gve[4] driver supports the Google Cloud Compute Engine (GCE) Virtual NIC (gVNIC).
 
 
 
@@ -2526,6 +2496,18 @@ sysctl(8).
 
 
 The
+**ure**
+driver supports the following USB Ethernet controllers:
+
+	Model:                                          Speed (Mbps):  
+	Realtek RTL8156/RTL8156B/RTL8156BG              10, 100, 1000, and 2500  
+	Realtek RTL8153/RTL8153B                        10, 100, and 1000  
+	Realtek RTL8152                                 10 and 100  
+	Realtek RTL8168/8169/8110/8211 via rgephy(4)    10, 100, and 1000
+
+
+
+The
 **urndis**
 driver supports the
 "tethering"
@@ -2602,6 +2584,79 @@ driver nor any other
 FreeBSD
 driver supports this modem.
 
+
+[[switch]]
+=== Ethernet Switches
+
+The man:adm6996fc[4] driver supports the Infineon ADM6996FC Fast Ethernet switch controller.
+
+
+
+The
+**arswitch**
+driver supports the following Ethernet switch controllers:
+
+*	Atheros AR8327 Seven-port Gigabit Ethernet Switch
+*	Atheros AR8316 Six-port Gigabit Ethernet Switch
+*	Atheros AR8236 Six-port Fast Ethernet Switch
+*	Atheros AR8226 Six-port Fast Ethernet Switch
+*	Atheros AR8216 Six-port Fast Ethernet Switch
+
+
+
+The
+**e6000sw**
+driver supports the following Gigabit Ethernet switch controllers:
+
+*	Marvell 88E6190X
+*	Marvell 88E6190
+*	Marvell 88E6176
+*	Marvell 88E6172
+*	Marvell 88E6341
+*	Marvell 88E6141
+
+
+
+The
+**e6060sw**
+driver supports the following Fast Ethernet switch controllers:
+
+*	Marvell 88E6060
+*	Marvell 88E6063
+*	Marvell 88E6065
+
+
+The man:felix[4] driver supports the Microsemi VSC9959 Felix Gigabit Ethernet switch controller found in the NXP Layerscape LS1028A SoC.
+
+
+The
+**ip17x**
+driver supports the following Fast Ethernet switch controllers:
+
+*	IC Plus IP178C
+*	IC Plus IP175D
+*	IC Plus IP175C
+*	IC Plus IP175A
+
+
+The man:ksz8995ma[4] driver supports the Micrel KSZ8995MA/KSZ8995FQ Fast Ethernet switch controller.
+
+
+The
+**mtkswitch**
+driver supports the following Ethernet switch controllers:
+
+*	MediaTek MT7628 (5 port Fast Ethernet)
+*	MediaTek MT7621 (5 port Gigabit Ethernet)
+*	MediaTek MT7620 (5 port Fast Ethernet)
+*	Ralink RT5350 (5 port Fast Ethernet)
+*	Ralink RT3352 (5 port Fast Ethernet)
+*	Ralink RT3050 (5 port Fast Ethernet)
+
+
+The *rtl8366* driver supports the Realtek 8366 Gigabit Ethernet switch controller.
+
+The *ukswitch* driver is designed to support potentially unknown Ethernet Switches.
 
 [[wlan]]
 === Wireless Network Interfaces
@@ -2752,6 +2807,13 @@ sub-driver with the following chipset generations:
 *	9000
 *	22000
 *	AX210
+
+The
+**iwlwifi**
+driver supports PCIe devices from the
+**mld**
+sub-driver with the following chipset generations:
+
 *	BZ
 *	SC
 
@@ -2867,6 +2929,17 @@ driver provides support for:
 *	Intel WiFi Link 5100
 *	Intel WiMAX/WiFi Link 5150
 *	Intel WiMAX/WiFi Link 5350
+
+
+
+The
+**iwx**
+driver supports the following M.2 wireless network adapters:
+
+*	Intel Wi-Fi 6 AX200
+*	Intel Wi-Fi 6 AX201 CNVi
+*	Intel Wi-Fi 6 AX210
+*	Intel Wi-Fi 6 AX211 CNVi
 
 
 
@@ -3473,54 +3546,136 @@ driver supports the following classes of UARTs:
 
 The
 **scc**
-driver supports the following classes of SCCs:
+driver supports the following classes of Serial Communications Controllers:
 
 *	QUICC: Freescale/NXP QUad Integrated Communications Controllers.
 *	Z8530: Zilog 8530 based serial communications controllers.
 
 
-[amd64, i386] AST 4 port serial card using shared IRQ
 
-* ARNET 8 port serial card using shared IRQ
-* ARNET (now Digiboard) Sync 570/i high-speed serial
+The
+**puc**
+driver supports the following
+PCI/PCIe multi-port serial and parallel adapters:
 
-[i386] Boca multi-port serial cards
+*	Advantech 2-port PCI PCI-1602/1603 Rev A/B1
+*	Applied Micro Circuits PCI 8 Port UART
+*	Avlab Technology PCI IO 2S
+*	Avlab Low Profile PCI 4 Serial
+*	Boca Research PCI Turbo Serial 658/654
+*	Brainboxes:
 
-* Boca BB1004 4-Port serial card (Modems _not_ supported)
-* Boca IOAT66 6-Port serial card (Modems supported)
-* Boca BB1008 8-Port serial card (Modems _not_ supported)
-* Boca BB2016 16-Port serial card (Modems supported)
+	-	Instashield PCIe IX-400, IX-200, IX-100
+	-	Instashield PCI IS-400, IS-200
+	-	PX Series PCIe RS232/RS422/RS485/LPT
+	-	UC Series Universal PCI RS232/RS422/RS485/LPT
+	-	UP Series PCI Dual RS232
 
-[i386] Comtrol Rocketport card (man:rp[4] driver)
+*	Comtrol RocketPort 550 PCI 16/8/4 port
+*	Decision Computer PCCOM PCI 8/4/2 port
+*	Digi Neo PCIe 4 and 8 Port (with and without RJ45)
+*	Digi Neo PCI 4 and 8 Port
+*	Dolphin Peripherals PCI 4035/4014
+*	Exar:
 
-[i386] Cyclades Cyclom-Y serial board (man:cy[4] driver)
+	-	XR17C/D152
+	-	XR17C154
+	-	XR17C158
+	-	XR17V258IV
+	-	XR17V352
+	-	XR17V354
+	-	XR17V358
 
-[i386] STB 4 port card using shared IRQ
+*	Feasso PCI FPP-02 2S1P
+*	HP Diva Serial \[GSP] Multiport UART:
 
-[amd64, i386] PCI-Based multi-port serial boards (man:puc[4] driver)
+	-	Tosca Console
+	-	Tosca Secondary
+	-	Maestro SP2
+	-	Superdome Console
+	-	Keystone SP2
+	-	Everest SP2
 
-* [amd64, i386] Actiontech 56K PCI
-* [amd64, i386] Avlab Technology, PCI IO 2S and PCI IO 4S
-* [amd64, i386] Comtrol RocketPort 550
-* [amd64, i386] Decision Computers PCCOM 4-port serial and dual port RS232/422/485
-* [amd64, i386] Dolphin Peripherals 4025/4035/4036
-* [amd64, i386] IC Book Labs Dreadnought 16x Lite and Pro
-* [amd64, i386] Lava Computers 2SP-PCI/DSerial-PCI/Quattro-PCI/Octopus-550
-* [amd64, i386] Middle Digital, Weasle serial port
-* [amd64, i386] Moxa Industio CP-114, Smartio C104H-PCI and C168H/PCI
-* [amd64, i386] NEC PK-UG-X001 and PK-UG-X008
-* [amd64, i386] Netmos NM9835 PCI-2S-550
-* [amd64, i386] Oxford Semiconductor OX16PCI954 PCI UART
-* [amd64, i386] Syba Tech SD-LAB PCI-4S2P-550-ECP
-* [amd64, i386] SIIG Cyber I/O PCI 16C550/16C650/16C850
-* [amd64, i386] SIIG Cyber 2P1S PCI 16C550/16C650/16C850
-* [amd64, i386] SIIG Cyber 2S1P PCI 16C550/16C650/16C850
-* [amd64, i386] SIIG Cyber 4S PCI 16C550/16C650/16C850
-* [amd64, i386] SIIG Cyber Serial (Single and Dual) PCI 16C550/16C650/16C850
-* [amd64, i386] Syba Tech Ltd. PCI-4S2P-550-ECP
-* [amd64, i386] Titan PCI-200H and PCI-800H
-* [amd64, i386] US Robotics (3Com) 3CP5609 modem
-* [amd64, i386] VScom PCI-400 and PCI-800
+*	I-O DATA RSA-PCI2/R
+*	IBM SurePOS 300 Series (481033H) serial ports
+*	IC Book Labs:
+
+	-	Dreadnought x16 Pro/Lite
+	-	Ironclad x8 Pro
+	-	Gunboat x4 Pro/Lite/Low Profile
+	-	Gunboat x2 Low Profile
+
+*	Kuroutoshikou SERIAL4P-LPPCI2
+*	Lava Computers:
+
+	-	Dual Serial PCI
+	-	Quattro-PCIe
+	-	Quattro-PCI
+	-	Octopus-550 PCI
+
+*	Moxa Technologies:
+
+	-	Smartio CP-102E/PCIe
+	-	Smartio CP-102EL/PCIe
+	-	Smartio C104H/PCI
+	-	Smartio CP-104UL/PCI
+	-	Smartio CP-104JU/PCI
+	-	Smartio CP-104EL/PCIe
+	-	Smartio CP-104EL-A/PCIe
+	-	CP-112UL PCI
+	-	Industio CP-114
+	-	Smartio CP-114EL/PCIe
+	-	Smartio CP-118EL-A/PCIe
+	-	C168H/PCI
+	-	C168U/PCI
+	-	CP-168EL/PCIe
+	-	Smartio CP-168EL-A/PCIe
+
+*	NetMos NM9815 Dual 1284 Printer port PCI
+*	NetMos NM9835 2/1 port UART + 1284 Printer PCI
+*	NetMos NM9845 4/6 port UART + 1284 Printer PCI
+*	NetMos NM9865 4/3/2 port UART + 1/2 port 1284 Printer PCI
+*	Oxford Semiconductor based boards:
+
+	-	OX16PCI952 UART (with and without Parallel port)
+	-	OX16PCI954 UART
+	-	OX9160/OX16PCI954 UARTs
+	-	OX16PCI958 UART
+
+*	Perle Ultraport4 Express PCIe Serial
+*	Perle Speed8/Speed4/Speed2 LE PCI Serial
+*	Quatech:
+
+	-	DSC-300/200/100 PCI
+	-	DSCLP-300/200/100 PCI
+	-	ESC-100/100D/100M PCI
+	-	QSC-300/200/100 PCI
+	-	QSCLP-100 PCI
+
+*	SIIG Cyber Series of UART and parallel port boards:
+
+	-	Cyber 2S and 2SP1 PCI 16550
+	-	Cyber 4 and 4S PCI 16C650 (10x family and 20x family)
+	-	Cyber I/O PCI (10x family and 20x family)
+	-	Cyber Parallel Dual PCI (10x family and 20x family)
+	-	Cyber Serial Dual PCI (10x family and 20x family)
+	-	Cyber 2S1P PCI (10x family and 20x family)
+	-	PS8000 8S PCI 16C650 (20x family)
+	-	Quartet Serial 850 PCI
+
+*	Sun 1040 PCI Quad Serial
+*	Sunix MIO5xxxx 4/2/1 port UART and 1284 Printer
+*	Sunix SUN1889/1888 PCI dual port serial
+*	Sunix SER5xxxx 8/4/2 port serial
+*	Syba Tech Ltd PCI-4S2P-550-ECP
+*	Titan PCI-800H/PCI-200H
+*	VScom:
+
+	-	PCIex-800H
+	-	PCI-200HV2
+	-	200Li uPCI
+	-	PCI-800L, PCI-200L, and PCI-100L
+	-	PCI-800, PCI-400, and PCI-200
 
 
 
@@ -3536,10 +3691,33 @@ driver supports the following adapters:
 
 
 The
-**uchcom**
+**ubsa**
 driver supports the following adapters:
 
-*	HL USB-RS232
+*	AnyData ADU-500A EV-DO modem
+*	AnyData ADU-E100A (no EV-DO mode support)
+*	Belkin F5U103
+*	Belkin F5U120
+*	e-Tek Labs Kwik232
+*	GoHubs GoCOM232
+*	Peracom single port serial adapter
+
+
+
+The
+**ubser**
+driver provides support for the BWCT console management serial adapters.
+
+
+
+The
+**uchcom**
+driver supports the following USB to serial UART controllers:
+
+*	WinChipHead CH9102 (max 6Mbps)
+*	WinChipHead CH343 (max 6Mbps)
+*	WinChipHead CH341 (max 2Mbps)
+*	WinChipHead CH340 (max 2Mbps)
 
 
 
@@ -3549,6 +3727,201 @@ driver currently supports the following devices which incorporate
 Cypress USB to RS232 bridge chips:
 
 *	DeLorme Earthmate USB GPS receiver
+
+
+
+The
+**uftdi**
+driver supports the following USB to serial UART controllers:
+
+*	FTDI FT4232H
+*	FTDI FT232R
+*	FTDI FT230X
+*	FTDI FT2232H
+*	FTDI FT2232D
+*	FTDI FT2232C
+*	FTDI FT8U232BM
+*	FTDI FT8U232AM
+*	FTDI FT8U100AX
+
+
+
+The
+**umcs**
+driver was tested on the following adapters:
+
+*	ST Lab U-360 two-port serial USB adapter
+*	ST Lab U-400 four-port serial USB adapter
+
+
+
+The
+**umct**
+driver supports the following adapters:
+
+*	Belkin F5U109
+*	Belkin F5U409
+*	D-Link DU-H3SP USB BAY Hub
+*	Magic Control Technology USB-232
+*	Sitecom USB-232
+
+
+
+
+The
+**uplcom**
+driver supports the following devices and adapters:
+
+*	ADLINK ND-6530 USB-Serial Adapter
+*	Alcatel One Touch 535/735 Phone
+*	Alcor AU9720 USB-RS232 Serial Adapter
+*	AlDiga AL-11U Modem
+*	Alltronix ACM003U00 Modem
+*	Anchor Serial adapter
+*	ATEN UC-232A
+*	ATEN UC-232B
+*	BAFO BF-800 and BF-810
+*	Belkin F5U257
+*	BenQ S81 Phone
+*	Corega CG-USBRS232R Serial Adapter
+*	Cressi Edy (Seiko) Diving Computer
+*	ELECOM UC-SGT Serial Adapter
+*	HAL Corporation Crossam2+USB IR commander
+*	Hama USB RS-232 Serial Adapter
+*	Hamlet exaggerate XURS232
+*	HP LD220 Point-Of-Sale (POS) Display
+*	IOGEAR UC-232A
+*	I/O DATA USB-RSAQ, USB-RSAQ2, USB-RSAQ3 and USB-RSAQ5
+*	iTegno WM1080A GSM/GFPRS Modem
+*	iTegno WM2080A CDMA Modem
+*	Leadtek 9531 GPS
+*	Micromax 610U Modem
+*	Microsoft Palm 700WX
+*	Mobile Action MA-620 Infrared Adapter
+*	Motorola Cables
+*	Nokia CA-42 Cable
+*	OTI DKU-5 cable
+*	Panasonic TY-TP50P6-S flat screen
+*	PLX CA-42 Phone Cable
+*	PLANEX USB-RS232 URS-03
+*	Prolific Generic USB-Serial Adapters
+*	Prolific Generic USB-Serial Adapters (HXN)
+*	Prolific Pharos USB-Serial Adapter
+*	Prolific USB-Serial Controller D
+*	RATOC REX-USB60
+*	Radio Shack USB Serial Cable
+*	Sagem USB-Serial Adapter
+*	Samsung I330 Phone Cradle
+*	Sandberg USB to Serial Link (model number 133-08)
+*	Sanwa KB-USB2 Multimeter cable
+*	Siemens/BenQ EF81, SX1, X65 and X75 Mobile Phones
+*	Sitecom USB-Serial Adapter
+*	SMART Technologies USB-Serial Adapter
+*	Sony QN3 Phone Cable
+*	Sony Ericsson Datapilot
+*	Sony Ericsson DCU-10 and DCU-11 (Susteen) USB Cables
+*	SOURCENEXT KeikaiDenwa 8 (with and without charger)
+*	Speed Dragon USB-Serial Cable
+*	Syntech CPT-8001C Barcode Scanner
+*	TDK UHA6400 and UPA9664 USB-PHS Adapters
+*	TRENDnet USB to Serial Converter (TU-S9)
+*	Tripp-Lite U209-000-R USB-Serial Adapter
+*	UIC HCR331 Magnetic Stripe Card Reader
+*	UIC MSR206 Magnetic Stripe Card Reader
+*	Willcom W-SIM DD PHS terminal.(WS002IN)
+*	YC-Cable USB-Serial Adapter
+*	Zeagle N2iTion3 Diving Computer
+
+
+
+The following devices should work with the
+**uslcom**
+driver:
+
+*	AC-Services CAN, CIS-IBUS, IBUS and OBD interfaces
+*	Aerocomm Radio
+*	AKTACOM ACE-1001 cable
+*	AMBER Wireless AMB2560
+*	Arkham DS-101 Adapter
+*	Argussoft ISP
+*	Arygon Technologies Mifare RFID Reader
+*	AVIT Research USB-TTL interface
+*	B&G H3000 Data Cable
+*	Balluff RFID reader
+*	Baltech card reader
+*	BEI USB VCP Sensor
+*	Burnside Telecom Desktop Mobile
+*	chip45.com Crumb128 module
+*	Clipsal 5000CT2, 5500PACA, 5500PCU, 560884, 5800PC, C5000CT2
+	and L51xx C-Bus Home Automation products
+*	Commander 2 EDGE(GSM) Modem
+*	Cygnal Fasttrax GPS and Debug adapter
+*	DataApex MultiCOM USB to RS232 converter
+*	Degree Controls USB adapter
+*	DekTec DTA Plus VHF/UHF Booster
+*	Dell DW700 GPS Receiver
+*	Digianswer ZigBee/802.15.4 MAC
+*	Dynastream ANT Development kits
+*	Elan USBcount50, USBscope50, USBpulse100 and USBwave12
+*	ELV USB-I2C interface
+*	EMS C1007 HF RFID controller
+*	Festo CPX-USB and CMSP interfaces
+*	Gemalto Prox-PU/CU contactless card reader
+*	Helicomm IP-Link 1220-DVM
+*	IMS USB-RS422 adapter
+*	Infinity GPS-MIC-1 Radio Monophone
+*	INSYS Modem
+*	IRZ SG-10 and MC35pu GSM/GPRS Modems
+*	Jablotron PC-60B
+*	Kamstrup M-Bus Master MultiPort 250D
+	and Optical Eye/3 wire utility meter interfaces
+*	Kyocera GPS
+*	Link Instruments MS-019 and MS-028
+	Oscilloscope/Logic Analyzer/Pattern Generators
+*	Lipowsky Baby-JTAG, Baby-LIN and HARP-1
+*	MEI CashFlow SC and Series 2000 cash acceptors
+*	MJS USB-TOSLINK Adapter
+*	MobiData GPRS USB Modems
+*	MSD DashHawk
+*	Multiplex RC adapter
+*	Optris MSpro LT Thermometer
+*	Owen AC4 USB-RS485 converter
+*	Pirelli DP-L10 SIP phone
+*	PLX CA-42 Phone cable
+*	Pololu USB to Serial
+*	Procyon AVS Mind Machine
+*	Renesas RX-Stick for RX610
+*	Siemens MC60 Cable
+*	Silicon Laboratories generic CP2101/CP2102/CP2103/CP2104/CP2105 chips
+*	Software Bisque Paramount ME
+*	SPORTident BSM7-D USB
+*	Suunto Sports Instrument
+*	Syntech CipherLab USB Barcode Scanner
+*	T-Com TC 300 SIP phone
+*	Tams Master Easy Control
+*	Telegesis ETRX2USB
+*	Timewave HamLinkUSB
+*	Tracient RFID Reader
+*	Track Systems Traqmate
+*	Vaisala USB Instrument cable
+*	VStabi Controller
+*	WAGO 750-923 USB Service Cable
+*	WaveSense Jazz Blood Glucose Meter
+*	WIENER Plein & Baus CML Data Logger, RCM Remote,
+	and PL512 and MPOD PSUs
+*	WMR RIGblaster Plug&Play and RIGtalk RT1
+*	Zephyr Bioharness
+
+
+
+The
+**uvscom**
+driver supports the following adapters:
+
+*	DDI Pocket Air H" C@rd
+*	DDI Pocket Air H" C@rd 64
+*	NTT P-in
+*	NTT P-in m@ster
 
 
 [[sound]]
@@ -3734,14 +4107,12 @@ driver supports audio devices based on the following chipset:
 
 The
 **snd\_hda**
-driver supports controllers having PCI class 4 (multimedia) and
-subclass 3 (HDA), compatible with Intel HDA specification.
-
-The
-**snd\_hda**
-driver supports more than two hundred different controllers and CODECs.
-There is no sense to list all of them here, as in most cases specific CODEC
-configuration and wiring are more important then type of the CODEC itself.
+driver supports PCI class 04h
+(multimedia),
+subclass 03h
+(HDA)
+audio controllers and codecs compatible with the
+Intel High Definition Audio 1.0 specification.
 
 
 
@@ -3885,17 +4256,13 @@ Owing to the generic nature of most USB devices, with some exceptions any device
 
 [NOTE]
 ====
-USB network interfaces can be found in <<ethernet,Ethernet Interfaces>> or <<wlan,Wireless Network Interfaces>>.
-====
-
-[NOTE]
-====
 USB Bluetooth adapters can be found in <<bluetooth,Bluetooth>>.
-====
 
-[NOTE]
-====
 USB human interface devices can be found in <<misc,Miscellaneous>>.
+
+USB network interfaces can be found in <<ethernet,Ethernet Interfaces>> or <<wlan,Wireless Network Interfaces>>.
+
+USB serial interfaces can be found in <<serial,Serial Interfaces>>.
 ====
 
 Altera University Program Secure Data Card IP Core (man:altera_sdcard[4] driver)
@@ -4006,27 +4373,18 @@ driver supports all UHCI v1.1 compliant controllers including:
 
 The
 **uipaq**
-driver supports the following adapters:
+driver supports the following iPAQ devices:
 
-ASUS P535 PDA
-
-Casio BE300 PDA
-
-Compaq IPaq PocketPC
-
-HP Jornada 568
-
-HP iPAQ 22xx/Jornada 548
-
-HTC PPC6700 Modem
-
-HTC Smart Phone
-
-HTC Winmobile
-
-Sharp W-ZERO3 ES Spart Phone
-
-Most Windows CE based phones
+*	ASUS P535 PDA
+*	Casio BE300 PDA
+*	Compaq IPaq PocketPC
+*	HP Jornada 568
+*	HP iPAQ 22xx/Jornada 548
+*	HTC PPC6700 Modem
+*	HTC Smart Phone
+*	HTC Winmobile
+*	Sharp W-ZERO3 ES Spart Phone
+*	Most Windows CE based phones
 
 
 [amd64, i386] USB 2.0 controllers using the EHCI interface (man:ehci[4] driver)
@@ -4071,8 +4429,7 @@ driver include:
 
 The
 **rtsx**
-driver supports different specification compatible chips.
-The following chips have been verified to work:
+driver supports the following Realtek SD card readers:
 
 *	RTS5209
 *	RTS5227
@@ -4081,12 +4438,9 @@ The following chips have been verified to work:
 *	RTS525A
 *	RTS5260
 *	RTL8411B
-
-It should also work for:
-
-*	RTS5249
-*	RTL8402
-*	RTL8411
+*	RTS5249 (unverified)
+*	RTL8402 (unverified)
+*	RTL8411 (unverified)
 
 
 
@@ -4103,115 +4457,6 @@ conversion cables, including the following:
 
 
 The
-**ubsa**
-driver supports the following adapters:
-
-*	AnyData ADU-500A EV-DO modem
-*	AnyData ADU-E100A (no EV-DO mode support)
-*	Belkin F5U103
-*	Belkin F5U120
-*	e-Tek Labs Kwik232
-*	GoHubs GoCOM232
-*	Peracom single port serial adapter
-
-
-
-The
-**ubser**
-driver provides support for the BWCT console management serial adapters.
-
-
-
-The
-**uftdi**
-driver supports the following adapters:
-
-*	B&B Electronics USB-&gt;RS422/485 adapter
-*	Elexol USB MOD1 and USB MOD3
-*	HP USB-Serial adapter shipped with some HP laptops
-*	Inland UAS111
-*	QVS USC-1000
-*	Buffalo PC-OP-RS / Kurouto-shikou KURO-RS universal remote
-*	Prologix GPIB-USB Controller
-
-
-
-The
-**uplcom**
-driver supports the following devices and adapters:
-
-*	ADLINK ND-6530 USB-Serial Adapter
-*	Alcatel One Touch 535/735 Phone
-*	Alcor AU9720 USB-RS232 Serial Adapter
-*	AlDiga AL-11U Modem
-*	Alltronix ACM003U00 Modem
-*	Anchor Serial adapter
-*	ATEN UC-232A
-*	ATEN UC-232B
-*	BAFO BF-800 and BF-810
-*	Belkin F5U257
-*	BenQ S81 Phone
-*	Corega CG-USBRS232R Serial Adapter
-*	Cressi Edy (Seiko) Diving Computer
-*	ELECOM UC-SGT Serial Adapter
-*	HAL Corporation Crossam2+USB IR commander
-*	Hama USB RS-232 Serial Adapter
-*	Hamlet exaggerate XURS232
-*	HP LD220 Point-Of-Sale (POS) Display
-*	IOGEAR UC-232A
-*	I/O DATA USB-RSAQ, USB-RSAQ2, USB-RSAQ3 and USB-RSAQ5
-*	iTegno WM1080A GSM/GFPRS Modem
-*	iTegno WM2080A CDMA Modem
-*	Leadtek 9531 GPS
-*	Micromax 610U Modem
-*	Microsoft Palm 700WX
-*	Mobile Action MA-620 Infrared Adapter
-*	Motorola Cables
-*	Nokia CA-42 Cable
-*	OTI DKU-5 cable
-*	Panasonic TY-TP50P6-S flat screen
-*	PLX CA-42 Phone Cable
-*	PLANEX USB-RS232 URS-03
-*	Prolific Generic USB-Serial Adapters
-*	Prolific Generic USB-Serial Adapters (HXN)
-*	Prolific Pharos USB-Serial Adapter
-*	Prolific USB-Serial Controller D
-*	RATOC REX-USB60
-*	Radio Shack USB Serial Cable
-*	Sagem USB-Serial Adapter
-*	Samsung I330 Phone Cradle
-*	Sandberg USB to Serial Link (model number 133-08)
-*	Sanwa KB-USB2 Multimeter cable
-*	Siemens/BenQ EF81, SX1, X65 and X75 Mobile Phones
-*	Sitecom USB-Serial Adapter
-*	SMART Technologies USB-Serial Adapter
-*	Sony QN3 Phone Cable
-*	Sony Ericsson Datapilot
-*	Sony Ericsson DCU-10 and DCU-11 (Susteen) USB Cables
-*	SOURCENEXT KeikaiDenwa 8 (with and without charger)
-*	Speed Dragon USB-Serial Cable
-*	Syntech CPT-8001C Barcode Scanner
-*	TDK UHA6400 and UPA9664 USB-PHS Adapters
-*	TRENDnet USB to Serial Converter (TU-S9)
-*	Tripp-Lite U209-000-R USB-Serial Adapter
-*	UIC HCR331 Magnetic Stripe Card Reader
-*	UIC MSR206 Magnetic Stripe Card Reader
-*	Willcom W-SIM DD PHS terminal.(WS002IN)
-*	YC-Cable USB-Serial Adapter
-*	Zeagle N2iTion3 Diving Computer
-
-
-
-The
-**umcs**
-driver was tested on the following adapters:
-
-*	ST Lab U-360 two-port serial USB adapter
-*	ST Lab U-400 four-port serial USB adapter
-
-
-
-The
 **umct**
 driver supports the following adapters:
 
@@ -4223,86 +4468,6 @@ driver supports the following adapters:
 
 
 [amd64, i386] Audio Devices (man:uaudio[4] driver)
-
-
-The following devices should work with the
-**uslcom**
-driver:
-
-*	AC-Services CAN, CIS-IBUS, IBUS and OBD interfaces
-*	Aerocomm Radio
-*	AKTACOM ACE-1001 cable
-*	AMBER Wireless AMB2560
-*	Arkham DS-101 Adapter
-*	Argussoft ISP
-*	Arygon Technologies Mifare RFID Reader
-*	AVIT Research USB-TTL interface
-*	B&G H3000 Data Cable
-*	Balluff RFID reader
-*	Baltech card reader
-*	BEI USB VCP Sensor
-*	Burnside Telecom Desktop Mobile
-*	chip45.com Crumb128 module
-*	Clipsal 5000CT2, 5500PACA, 5500PCU, 560884, 5800PC, C5000CT2
-	and L51xx C-Bus Home Automation products
-*	Commander 2 EDGE(GSM) Modem
-*	Cygnal Fasttrax GPS and Debug adapter
-*	DataApex MultiCOM USB to RS232 converter
-*	Degree Controls USB adapter
-*	DekTec DTA Plus VHF/UHF Booster
-*	Dell DW700 GPS Receiver
-*	Digianswer ZigBee/802.15.4 MAC
-*	Dynastream ANT Development kits
-*	Elan USBcount50, USBscope50, USBpulse100 and USBwave12
-*	ELV USB-I2C interface
-*	EMS C1007 HF RFID controller
-*	Festo CPX-USB and CMSP interfaces
-*	Gemalto Prox-PU/CU contactless card reader
-*	Helicomm IP-Link 1220-DVM
-*	IMS USB-RS422 adapter
-*	Infinity GPS-MIC-1 Radio Monophone
-*	INSYS Modem
-*	IRZ SG-10 and MC35pu GSM/GPRS Modems
-*	Jablotron PC-60B
-*	Kamstrup M-Bus Master MultiPort 250D
-	and Optical Eye/3 wire utility meter interfaces
-*	Kyocera GPS
-*	Link Instruments MS-019 and MS-028
-	Oscilloscope/Logic Analyzer/Pattern Generators
-*	Lipowsky Baby-JTAG, Baby-LIN and HARP-1
-*	MEI CashFlow SC and Series 2000 cash acceptors
-*	MJS USB-TOSLINK Adapter
-*	MobiData GPRS USB Modems
-*	MSD DashHawk
-*	Multiplex RC adapter
-*	Optris MSpro LT Thermometer
-*	Owen AC4 USB-RS485 converter
-*	Pirelli DP-L10 SIP phone
-*	PLX CA-42 Phone cable
-*	Pololu USB to Serial
-*	Procyon AVS Mind Machine
-*	Renesas RX-Stick for RX610
-*	Siemens MC60 Cable
-*	Silicon Laboratories generic CP2101/CP2102/CP2103/CP2104/CP2105 chips
-*	Software Bisque Paramount ME
-*	SPORTident BSM7-D USB
-*	Suunto Sports Instrument
-*	Syntech CipherLab USB Barcode Scanner
-*	T-Com TC 300 SIP phone
-*	Tams Master Easy Control
-*	Telegesis ETRX2USB
-*	Timewave HamLinkUSB
-*	Tracient RFID Reader
-*	Track Systems Traqmate
-*	Vaisala USB Instrument cable
-*	VStabi Controller
-*	WAGO 750-923 USB Service Cable
-*	WaveSense Jazz Blood Glucose Meter
-*	WIENER Plein & Baus CML Data Logger, RCM Remote,
-	and PL512 and MPOD PSUs
-*	WMR RIGblaster Plug&Play and RIGtalk RT1
-*	Zephyr Bioharness
-
 
 
 The
@@ -4330,17 +4495,6 @@ driver supports the following devices:
 *	Sony Clie NX60
 *	Sony Clie S360
 *	Sony Clie TJ37
-
-
-
-The
-**uvscom**
-driver supports the following adapters:
-
-*	DDI Pocket Air H" C@rd
-*	DDI Pocket Air H" C@rd 64
-*	NTT P-in
-*	NTT P-in m@ster
 
 
 
@@ -4415,6 +4569,12 @@ the Bluetooth specification v1.1, including:
 [[crypto-accel]]
 === Cryptographic Accelerators
 
+The man:aesni[4] driver supports the AES and SHA functions of x86 processors.
+
+The man:armv8crypto[4] driver supports the AES, SHA-1, SHA-2, and finite field Arithmetic engines in processors implementing the ARMv8 Cryptograpic Extension.
+
+The **ccp** driver supports the AMD Platform Security Processor (PSP) Cryptographic Coprocessor found in AMD Ryzen devices.
+
 
 The
 **ccr**
@@ -4427,6 +4587,8 @@ based on the T6 ASIC:
 *	Chelsio T62100-SO-CR
 *	Chelsio T62100-CR
 
+
+The man:glxsb[4] driver supports the security block found in AMD Geode LX devices.
 
 
 The
@@ -4470,6 +4632,24 @@ Soekris Engineering vpn1401 and vpn1411
 > Contains a 7955 and supports symmetric and random number operations.
 
 
+The man:padlock[4] driver supports the AES/RNG/RSA/SHA-1, and SHA-2 engine found on Via Technologies C7, C3, and Eden devices.
+
+
+The
+**qat**
+driver supports the following Intel QuickAssist Technology Engines:
+
+*	Intel (R) C62x Chipset
+*	Intel (R) Atom C3000 processor product family
+*	Intel (R) QuickAssist Adapter 8960/Intel (R) QuickAssist Adapter 8970
+	(formerly known as "Lewis Hill")
+*	Intel (R) Communications Chipset 8925 to 8955 Series
+*	Intel (R) Atom P5300 processor product family
+*	Intel (R) QAT 4xxx Series
+
+
+The man:qat_c2xxx[4] driver supports the Intel QuickAssist Technology engine found on Atom C2000 devices.
+
 
 The
 **safe**
@@ -4480,6 +4660,13 @@ driver supports the following SafeXcel chips:
 	symmetric crypto operations, RNG, public key operations, and full IPsec
 	packet processing.  
 	SafeNet 1741    A faster version of the 1141.
+
+
+
+The
+**safexcel**
+driver supports the cryptographic acceleration functions of the
+Inside Secure EIP-97 device found on some Marvell systems-on-chip.
 
 
 [[misc]]
