handbook/dtrace: Fix links to illumos Dynamic Tracing Guide
Also, stylize illumos correctly while here.

Event:		Berlin 2025 Hackathon

--- a/documentation/content/en/books/handbook/dtrace/_index.adoc
+++ b/documentation/content/en/books/handbook/dtrace/_index.adoc
@@ -63,7 +63,7 @@ The FreeBSD implementation provides full support for kernel DTrace and experimen
 Userland DTrace allows users to perform function boundary tracing for userland programs using the `pid` provider, and to insert static probes into userland programs for later tracing.
 Some ports, such as package:databases/postgresql12-server[] and package:lang/php74[] have a DTrace option to enable static probes.
 
-The official guide to DTrace is maintained by the Illumos project at https://illumos.org/books/dtrace/bookinfo.html[DTrace Guide].
+The official guide to DTrace is maintained by the illumos project at https://illumos.org/books/dtrace/bookinfo.html[illumos Dynamic Tracing Guide].
 
 After reading this chapter, you will know:
 
@@ -152,7 +152,7 @@ Not all of the scripts found in the DTrace Toolkit will work as-is on FreeBSD an
 The DTrace Toolkit includes many scripts in the special language of DTrace.
 This language is called the D language and it is very similar to C++.
 An in depth discussion of the language is beyond the scope of this document.
-It is covered extensively in the http://www.dtrace.org/guide[Illumos Dynamic Tracing Guide].
+It is covered extensively in the https://www.illumos.org/books/dtrace/bookinfo.html[illumos Dynamic Tracing Guide].
 
 [[dtrace-out-of-kernel]]
 == Enabling DTrace in Out-of-Kernel Modules
