--- a/website/content/en/status/report-2025-04-2025-06/openjdk.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/openjdk.adoc
@@ -17,7 +17,7 @@ In this quarter the following issues/milestones were reached:
 
 * The OpenJDK 24 port https://cgit.freebsd.org/ports/commit/?id=5fc04e4b900f974d5d334b1165668bddc90a86f6[was updated to OpenJDK 24.0.1] at the beginning of the quarter, soon after it was released by upstream.
 * A https://github.com/freebsd/openjdk/commit/de1b86fcc3dd2469240bbe0774d865fa6cd0d185[recurring issue with the PPC ports] was fixed (thanks to mailto:pkubaj@FreeBSD.org[Piotr Kubaj]).
-* A new way of boostrapping OpenJDK ports https://reviews.freebsd.org/D50349[was suggested and discussed] – this is a prerequisite to get the FreeBSD port integrated into the OpenJDK CI environment.
+* A new way of bootstrapping OpenJDK ports https://reviews.freebsd.org/D50349[was suggested and discussed] – this is a prerequisite to get the FreeBSD port integrated into the OpenJDK CI environment.
 * A https://github.com/openjdk/jtreg/pull/262[CI job for building and testing] the jtreg test harness for FreeBSD was integrated using GitHub Actions - in part to get familiar with the CI framework used by OpenJDK projects, but also to make sure the test harness builds and works on FreeBSD.
 
 In addition, a lot of time was spent cleaning up and refactoring the BSD port for Aarch64, fixing various issues and working towards making the BSD port up to date with the OpenJDK mainline.
