__FreeBSD_version bumped to for LinuxKPI changes so drmkmod can detect
Sponsored by:	The FreeBSD Foundation

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -770,6 +770,11 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |April 18, 2025
 |14.2-STABLE after changing alloc changes to LinuxKPI and removing iwlwifi firmware.
 
+|1403503
+|gitref:6cdcf08c9c5eda6dc3b8395cefd9d30a4f5e2f1a[repository="src",length=12]
+|July 13, 2025
+|14.3-STABLE after LinuxKPI dma-mapping.h and acpi changes.
+
 |===
 
 ////
