Administration: Update bugmeister
Reviewed by:	linimon

--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -234,6 +234,8 @@ Email sent to the Backups Team is handled by the Cluster Administrators.
 The Bugmeister Team is responsible for ensuring that the problem report software is in working order, that the entries are correctly categorised and that there are no invalid entries.
 
 * {linimon}
+* Siva Mahadevan <mailto:me@svmhdvn.name[]>
+* {ziaee}
 
 [[t-clusteradm]]
 == Cluster Administrators <clusteradm@>
