Handbook/virtualization: Fix vnet if example
PR:		285833
Reviewed by:	ivy, jlduran, mhorne, ziaee

--- a/documentation/content/en/books/handbook/virtualization/_index.adoc
+++ b/documentation/content/en/books/handbook/virtualization/_index.adoc
@@ -1939,7 +1939,7 @@ bhyve {
 
         host.hostname = "your-hostname-here";
         vnet;
-        vnet.interface = "em${if}";
+        vnet.interface = "jail${if}";
         path = "/jails/${name}";
         persist;
         securelevel = 3;
@@ -1976,7 +1976,7 @@ bhyve {
 
         host.hostname = "your-hostname-here";
         vnet;
-        vnet.interface = "em${if}";
+        vnet.interface = "jail${if}";
         path = "/jails/${name}";
         persist;
         securelevel = 3;
