Add Sergey Kiselev <root@dc365.ru> to the contributors list

--- a/shared/contrib-additional.adoc
+++ b/shared/contrib-additional.adoc
@@ -1990,6 +1990,7 @@
 * Sergey V. Dyatko <mailto:sergey.dyatko@gmail.com[sergey.dyatko@gmail.com]>
 * Sergey Gershtein <mailto:sg@mplik.ru[sg@mplik.ru]>
 * Sergey Glushchenko <mailto:deen@smz.com.ua[deen@smz.com.ua]>
+* Sergey Kiselev <mailto:root@dc365.ru[root@dc365.ru]>
 * Sergey Kosyakov <mailto:ks@itp.ac.ru[ks@itp.ac.ru]>
 * Sergey Lyubka <mailto:valenok@gmail.com[valenok@gmail.com]>
 * Sergey Matveev <mailto:stargrave@stargrave.org[stargrave@stargrave.org]>
