porters-handbook: Add __FreeBSD_version for DMA_MIN/MAX_ADDRESS removal

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -275,6 +275,11 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |June 3, 2025
 |15.0-CURRENT after pulling in dma-mapping.h changes from drm-kmod to LinuxKPI.
 
+|1500051
+|gitref:4dd828c80828637452a8a4e07a64e294c82e5d8b[repository="src",length=12]
+|Jul 15, 2025
+|15.0-CURRENT after the addition of kva_layout and removal of DMAP_MIN/MAX_ADDRESS.
+
 |1500062
 |gitref:567e6250c003eeb251b4bc8dbe60d2adabab2988[repository="src",length=12]
 |August 17, 2025
