HW Relnotes: Add ufshci(4) to template for 15.0
The ufshci(4) driver was added in src:1349a733cf28 for FreeBSD 15.0.
Add it to the Release Haredware notes in the Disk Controllers section.

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -332,6 +332,8 @@ EISA adapters are not supported.
 
 &hwlist.tws;
 
+&hwlist.ufshci;
+
 &hwlist.vpo;
 
 With all supported SCSI controllers, full support is provided for SCSI-I, SCSI-II, and SCSI-III peripherals, including hard disks, optical disks, tape drives (including DAT, 8mm Exabyte, Mammoth, and DLT), medium changers, processor target devices and CD-ROM drives.
